--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,18 @@ article
     font-size: 14px;
     text-transform: uppercase;
 }
+/* changing the nav ul to inline */
+nav > ul > li{
+
+    display: inline-block;
+    padding: 10px 3px;
+    font-size: 20px;
+}
+/* Removing the underline  */
+nav > ul > li > a 
+{
+    text-decoration: none;
+}
+
+
+
