--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,14 @@ nav > ul > li{
 nav > ul > li > a 
 {
     text-decoration: none;
+
+}
+/* changing the hover on the li */
+
+nav > ul > li:hover
+{
+    background-color: #ffffff;
+    
 }
 
 
