--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@ body{
 header
 {
     background-color: rgba(119, 90, 90, 0.6);
+    /* position: fixed;
+    top: 10px; */
+
 }
 /*  applying font with element, class  selectors..*/
 section
