--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,4 +70,26 @@ img
 {
     clear: left;
 }
-
+/* Misslenious Update  */
+#comment
+{
+    padding: 17px;
+}
+input[type="text"], input[type="email"]
+{
+    position: relative;
+    left: 100px;
+    width: 300px;
+    margin-bottom: 10px;
+}
+input[type="email"]
+{
+    position: relative;
+    left: 130px;
+}
+input[type="submit"]
+{
+    position: relative;
+    width: 300px;
+    height: 50px;
+}
