--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,16 @@
 body{
 
    background-color: skyblue;
-   border: 10px lightgrey solid ;
+   /* border: 10px lightgrey solid ; */
    margin: 10px;
 }
 header
 {
-    background-color: rgba(119, 90, 90, 0.6);
-    /* position: fixed;
-    top: 10px; */
+    position: fixed;
+    top: 0;
+    width: 98%;
+    background-color:rgba(125, 125, 125, 0.7);
+    
 
 }
 /*  applying font with element, class  selectors..*/
@@ -85,11 +87,23 @@ input[type="text"], input[type="email"]
 input[type="email"]
 {
     position: relative;
-    left: 130px;
+    left: 10px;
 }
 input[type="submit"]
 {
     position: relative;
     width: 300px;
     height: 50px;
+}
+#content
+{
+
+    margin-top: 60px;
+
+}
+#content1
+{
+
+    margin-top: 90px;
+
 }
